--- a/static/logui/less/global.less
+++ b/static/logui/less/global.less
@@ -1,1 +1,40 @@
-@colour: #0072C6;
+@time-hyperlink-hover-duration: 0.2s;
+
+@radius: 6px;
+
+@colour-page-background: #FFF;
+@colour-text: #000;
+
+@colour-logui-purple: #46509E;
+@colour-green: #4A9B46;
+@colour-red: #AD3A3A;
+
+@colour-nojs-background: @colour-logui-purple;
+@colour-nojs-text: #FFF;
+
+@colour-button: @colour-logui-purple;
+@colour-button-hover: tint(@colour-logui-purple, 30%);
+@colour-button-text: #FFF;
+
+@height-row-top: 64px;
+@height-menu-category-width: 50px;
+
+@width-menu-gradient: 40px;
+
+@colour-banner-background: @colour-logui-purple;
+@colour-banner-text: #FFF;
+
+@colour-trail-background: @colour-page-background;
+@colour-trail-link: @colour-logui-purple;
+@colour-trail-link-hover: tint(@colour-logui-purple, 60%);
+
+@height-menu-margin-top: 20px;
+@colour-menu-gradient-colour: tint(@colour-logui-purple, 50%);
+
+@colour-menu-main-background: tint(@colour-logui-purple, 70%);
+@colour-menu-sub-background: tint(@colour-logui-purple, 80%);
+
+@colour-menu-sub-h4-colour: tint(@colour-logui-purple, 20%);
+@colour-menu-li-a-hover: #000;
+@colour-menu-li-a-hover: @colour-logui-purple;
+@colour-menu-li-a-hover-text: #FFF;
