App login functionality working (along with the API), now building up the basic features to get things working

--- a/static/logui/less/core.less
+++ b/static/logui/less/core.less
@@ -37,8 +37,9 @@ div#approot {
 
 button {
     min-width: 50px;
-    padding: 5px;
-    font-size: 18px;
+    padding: 8px;
+    font-size: 16px;
+    margin-right: 10px;
     border: 0;
     color: @colour-button-text;
     background-color: @colour-button;
