--- a/static/logui/less/icons.less
+++ b/static/logui/less/icons.less
@@ -48,6 +48,18 @@
     background-repeat: no-repeat;
 }
 
+.icon-user.green {
+    background-image: url('../img/icons.svg#user-green');
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
+}
+
+.icon-user.green:hover {
+    background-image: url('../img/icons.svg#user-dark');
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
+}
+
 /* Application Icon */
 .icon-application.dark {
     background-image: url('../img/icons.svg#application-dark');
