--- a/static/logui/less/main.less
+++ b/static/logui/less/main.less
@@ -56,3 +56,38 @@ main div.header-container div.buttons-top button {
     padding-bottom: 0;
     margin-left: 5px;
 }
+
+main > * {
+    margin: 20px 20px 20px 0;
+}
+
+main > p {
+    font-size: 12pt;
+    line-height: 20pt;
+}
+
+form label {
+    display: inline-block;
+    margin-bottom: 10px;
+    line-height: 22pt;
+}
+
+form label span {
+    display: inline-block;
+    width: 110px;
+    font-weight: 500;
+}
+
+form label input[type="text"], form label input[type="password"] {
+    float: right;
+    width: 200px;
+    padding: 4px;
+    font-size: 13pt;
+}
+
+main p.bottom {
+    position: absolute;
+    bottom: 0;
+    line-height: 18pt;
+    color: tint(@colour-logui-purple, 60%);
+}
