--- a/worker/templates/logui/base.html
+++ b/worker/templates/logui/base.html
@@ -30,17 +30,90 @@
     </head>
 
     <body>
-        <div id="approot">
+        <!-- <div id="approot">
         {% block bodyblock %}
         {% include 'logui/nojs.html' %}
         {% endblock %}
-        </div>
+        </div> -->
 
         
+        <div id="approot">
+
+            <header class="tudelft">
+                <a href="#"><img src="{% static 'logui/img/logo.svg' %}" alt="LogUI Logo" /></a>
+                <span class="version">v0.4.0</span>
+                <span class="tagline">Server Preview</span>
+            </header>
+            <nav class="trail">
+                <ul>
+                    <li><a href="#">LogUI</a></li>
+                    <li><a href="#">Applications</a></li>
+                    <li><a href="#"><strong>SearchX</strong></a></li>
+                </ul>
+            </nav>
+            <nav class="menu">
+                <ul class="categories">
+                    <li><a class="icon-application dark" href="#">Applications</a></li>
+                    <li class="user"><a class="icon-user dark" href="#">User Management</a></li>
+                </ul>
+                <div class="sub">
+                    <h3>Applications</h3>
+
+                    <h4>Current Applications</h4>
+
+                    <ul>
+                        <li><a href="#" class="noanimation icon-application dark"><span>Application One</span></a></li>
+                        <li><a href="#" class="noanimation icon-application dark"><span>Application Two</span></a></li>
+                        <li><a href="#" class="noanimation icon-application dark"><span>Application Three</span></a></li>
+                    </ul>
+
+                    <h4>Settings</h4>
+                    <ul>
+                        <li><a href="#" class="noanimation icon-add dark"><span>Create New Application</span></a></li>
+                    </ul>
+                </div>
+            </nav>
+            <main>
+                <div class="header-container">
+                    <h1>
+                        Login to LogUI
+                    </h1>
+                </div>
+                
+                <p>
+                    <strong>Welcome to LogUI!</strong> This is the interface from where you can control this LogUI instance, from creating new application references, to downloading interaction logs.
+                </p>
+
+                <div class="split">
+                    <form method="POST" action="#">
+                        <label>
+                            <span>Username</span>
+                            <input type="text" />
+                        </label>
+                        <label>
+                            <span>Password</span>
+                            <input type="password" />
+                        </label>
+                        <div>
+                            <button>Login</button>
+                        </div>
+                    </form>
+                    <div class="right red">
+                        Enter your username and password into the input fields, and click the Login button.
+                    </div>
+                </div>
+
+                <p class="bottom">
+                    LogUI Control App, version <code>0.4.0</code><br />
+                    Running on <code>hostname</code>
+                </p>
+            </main>
+        </div>
+
         <!-- <div id="approot">
 
             <header class="tudelft">
-                <img src="{% static 'logui/img/logo.svg' %}" alt="LogUI Logo" />
+                <a href="#"><img src="{% static 'logui/img/logo.svg' %}" alt="LogUI Logo" /></a>
                 <span class="version">v0.4.0</span>
                 <span class="tagline">Server Preview</span>
             </header>
