Applications listing working

--- a/static/logui/less/core.less
+++ b/static/logui/less/core.less
@@ -50,3 +50,30 @@ button {
 button:hover {
     background-color: @colour-button-hover;
 }
+
+span.indicator {
+    display: block;
+    height: 26px !important;
+    width: 26px !important;
+    line-height: 0 !important;
+    padding: 0 !important;
+    background-color: @colour-logui-purple;
+    border-radius: 13px;
+}
+
+span.indicator.green {
+    background-color: @colour-green;
+}
+
+span.indicator.red {
+    background-color: @colour-red;
+}
+
+span.logui span {
+    font-weight: 500;
+    color: @colour-logui-purple;
+}
+
+.mono {
+    font-family: monospace;
+}
