--- a/static/logui/less/main.less
+++ b/static/logui/less/main.less
@@ -1,5 +1,10 @@
 @import 'global.less';
 
+@colour-table-border: tint(@colour-logui-purple, 50%);
+@colour-table-border-lighter: tint(@colour-logui-purple, 70%);
+@colour-table-background-hover: tint(@colour-logui-purple, 80%);
+@colour-table-subtitle: tint(@colour-logui-purple, 30%);
+
 main {
     grid-area: main;
     overflow-y: scroll;
@@ -18,30 +23,16 @@ main div.header-container h1 {
     font-size: 32px;
 }
 
+main div.header-container h1 span.indicator {
+    display: inline-block !important;
+    margin-right: 8px;
+}
+
 main div.header-container h1 span.subtitle {
     display: inline-block;
     margin-left: 10px;
     font-size: 16px;
     font-weight: 300;
-}
-
-main div.header-container h1 span.indicator {
-    display: inline-block;
-    position: relative;
-    top: 1px;
-    height: 26px;
-    width: 26px;
-    margin-right: 8px;
-    background-color: @colour-logui-purple;
-    border-radius: 13px;
-}
-
-main div.header-container h1 span.indicator.green {
-    background-color: @colour-green;
-}
-
-main div.header-container h1 span.indicator.red {
-    background-color: @colour-red;
 }
 
 main div.header-container div.buttons-top {
@@ -90,4 +81,93 @@ main p.bottom {
     bottom: 0;
     line-height: 18pt;
     color: tint(@colour-logui-purple, 60%);
+}
+
+main div.table {
+    border-top: 1px solid @colour-table-border;
+}
+
+main div.table strong {
+    font-weight: 500;
+}
+
+main div.table div.row {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    position: relative;
+    height: 35px;
+    line-height: 35px;
+    border-bottom: 1px solid @colour-table-border-lighter;
+}
+
+main div.table div.row:hover {
+    background-color: @colour-table-background-hover;
+}
+
+main div.table div.row.header:hover {
+    background-color: transparent;
+}
+
+main div.table div.row.double-height {
+    height: 55px;
+    line-height: 55px;
+}
+
+main div.table div.row.header {
+    font-size: 13pt;
+    font-weight: 500;
+    border-bottom: 1px solid @colour-table-border;
+}
+
+main div.table div.row a.row-link {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    line-height: 0; 
+    font-size: 0;
+    color: transparent; 
+}
+
+main div.table div.row a:not(.row-link) {
+    position: relative;
+    z-index: 1;
+}
+
+main div.table div.row > span.centre {
+    text-align: center;
+}
+
+main div.table div.row > span:first-child {
+    -moz-box-sizing: border-box; 
+    -webkit-box-sizing: border-box; 
+    box-sizing: border-box; 
+    padding-left: 5px;
+}
+
+main div.table div.row > span:last-child {
+    -moz-box-sizing: border-box; 
+    -webkit-box-sizing: border-box; 
+    box-sizing: border-box; 
+    padding-right: 5px;
+}
+
+main div.table div.row span.double span.title {
+    display: block;
+    position: relative;
+    bottom: 8px;
+    font-size: 13pt;
+    height: 13pt;
+    line-height: auto;
+}
+
+main div.table div.row span.double span.subtitle {
+    display: block;
+    position: relative;
+    bottom: 6px;
+    font-size: 10pt;
+    height: 10pt;
+    line-height: auto;
+    color: @colour-table-subtitle;
 }
