--- a/static/logui/less/header.less
+++ b/static/logui/less/header.less
@@ -8,7 +8,7 @@ header {
 }
 
 header.tudelft {
-    background-image: url('../img/tudelft.svg'), linear-gradient(to right, @colour-banner-background, #00A6D6);
+    background-image: url('../img/tudelft-header.svg'), linear-gradient(to right, @colour-banner-background, #00A6D6);
     background-position: right, right;
     background-repeat: no-repeat;
     background-size: auto, 100px 100%;
