--- a/static/logui/less/main.less
+++ b/static/logui/less/main.less
@@ -48,6 +48,14 @@ main div.header-container div.buttons-top button {
     margin-left: 5px;
 }
 
+main h2 {
+    display: inline-block;
+    margin: 0;
+    padding: 0;
+    font-size: 24px;
+    margin-top: 5px;
+}
+
 main > * {
     margin: 20px 20px 20px 0;
 }
@@ -81,6 +89,20 @@ main p.bottom {
     bottom: 0;
     line-height: 18pt;
     color: tint(@colour-logui-purple, 60%);
+}
+
+main p.bottom.right{
+    right: 0;
+}
+
+main p.bottom.right.logo a {
+    display: block;
+    width: 200px;
+}
+
+main p.bottom.right.logo a img {
+    width: 100%;
+    height: auto;
 }
 
 main div.table {
