--- a/worker/logui_apps/control/templates/logui/control/landing.html
+++ b/worker/logui_apps/control/templates/logui/control/landing.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" type="text/less" href="{% static 'logui/less/main.less' %}" />
     <link rel="stylesheet" type="text/less" href="{% static 'logui/less/login.less' %}" />
     <link rel="stylesheet" type="text/less" href="{% static 'logui/less/applications.less' %}" />
+    <link rel="stylesheet" type="text/less" href="{% static 'logui/less/about.less' %}" />
     {% endcompress %}
 {% endblock %}
 
