--- a/static/logui/less/login.less
+++ b/static/logui/less/login.less
@@ -13,15 +13,9 @@ main div.split form {
 
 main div.split div.right {
     flex: 50%;
-    padding: 10px;
     line-height: 18pt;
-    background-color: @colour-login-right-background;
-    border-radius: @radius;
-    -moz-box-sizing: border-box; 
-    -webkit-box-sizing: border-box; 
-     box-sizing: border-box; 
 }
 
-main div.split div.right.red {
+main div.split div.right.warning {
     background-color: @colour-login-right-background-red;
 }
