--- a/static/logui/less/icons.less
+++ b/static/logui/less/icons.less
@@ -134,3 +134,28 @@
     background-size: 100% 100%;
     background-repeat: no-repeat;
 }
+
+/* Key Icon */
+.icon-key.dark {
+    background-image: url('../img/icons.svg#key-dark');
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
+}
+
+.icon-key.dark:hover {
+    background-image: url('../img/icons.svg#key-light') !important;
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
+}
+
+.icon-key.light {
+    background-image: url('../img/icons.svg#key-light');
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
+}
+
+.icon-key.light:hover {
+    background-image: url('../img/icons.svg#key-dark') !important;
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
+}
