--- a/static/logui/less/login.less
+++ b/static/logui/less/login.less
@@ -3,19 +3,19 @@
 @colour-login-right-background: tint(@colour-logui-purple, 70%);
 @colour-login-right-background-red: tint(@colour-red, 70%);
 
-main div.split {
+main section div.split {
     display: flex;
 }
 
-main div.split form {
+main section div.split form {
     flex: 50%;
 }
 
-main div.split div.right {
+main section div.split div.right {
     flex: 50%;
     line-height: 18pt;
 }
 
-main div.split div.right.warning {
+main section div.split div.right.warning {
     background-color: @colour-login-right-background-red;
 }
