--- a/worker/logui_apps/control/templates/logui/control/landing.html
+++ b/worker/logui_apps/control/templates/logui/control/landing.html
@@ -9,7 +9,9 @@
     <link rel="stylesheet" type="text/less" href="{% static 'logui/less/header.less' %}" />
     <link rel="stylesheet" type="text/less" href="{% static 'logui/less/nav/trail.less' %}" />
     <link rel="stylesheet" type="text/less" href="{% static 'logui/less/nav/menu.less' %}" />
+    <link rel="stylesheet" type="text/less" href="{% static 'logui/less/nav/grid.less' %}" />
     <link rel="stylesheet" type="text/less" href="{% static 'logui/less/main.less' %}" />
+    <link rel="stylesheet" type="text/less" href="{% static 'logui/less/footer.less' %}" />
     <link rel="stylesheet" type="text/less" href="{% static 'logui/less/login.less' %}" />
     <link rel="stylesheet" type="text/less" href="{% static 'logui/less/applications.less' %}" />
     <link rel="stylesheet" type="text/less" href="{% static 'logui/less/about.less' %}" />
