--- a/static/logui/less/icons.less
+++ b/static/logui/less/icons.less
@@ -159,3 +159,53 @@
     background-size: 100% 100%;
     background-repeat: no-repeat;
 }
+
+/* Token Icon */
+.icon-token.dark {
+    background-image: url('../img/icons.svg#token-dark');
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
+}
+
+.icon-token.dark:hover {
+    background-image: url('../img/icons.svg#token-light') !important;
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
+}
+
+.icon-token.light {
+    background-image: url('../img/icons.svg#token-light');
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
+}
+
+.icon-token.light:hover {
+    background-image: url('../img/icons.svg#token-dark') !important;
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
+}
+
+/* Download Icon */
+.icon-download.dark {
+    background-image: url('../img/icons.svg#download-dark');
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
+}
+
+.icon-download.dark:hover {
+    background-image: url('../img/icons.svg#download-light') !important;
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
+}
+
+.icon-download.light {
+    background-image: url('../img/icons.svg#download-light');
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
+}
+
+.icon-download.light:hover {
+    background-image: url('../img/icons.svg#download-dark') !important;
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
+}
