--- a/static/logui/less/nav/menu.less
+++ b/static/logui/less/nav/menu.less
@@ -51,46 +51,10 @@ nav.menu div.icons ul li a {
     color: transparent;
 }
 
-// nav.menu ul.categories {
-//     background-color: @colour-menu-main-background;
-//     position: relative;
-// }
-
-// nav.menu ul.categories li {
-//     display: block;
-//     width: calc(100% - 12px);
-//     position: relative;
-//     left: 6px;
-//     height: @height-menu-category-width;
-// }
-
-// nav.menu ul.categories li:first-child {
-//     margin-top: @height-menu-margin-top;
-// }
-
-// nav.menu ul.categories li a {
-//     display: block;
-//     width: 100%;
-//     height: 100%;
-//     line-height: 0; 
-//     font-size: 0;
-//     color: transparent; 
-// }
-
-// nav.menu ul.categories li {
-//     margin-bottom: 10px;
-// }
-
-// nav.menu ul.categories li.user {
-//     position: absolute;
-//     bottom: 6px;
-//     margin-bottom: 0;
-// }
-
 nav.menu div.sub {
     padding: @height-menu-margin-top 0 0 10px;
     background-color: @colour-menu-sub-background;
-    background-image: linear-gradient(to right, @colour-menu-sub-background, @colour-menu-gradient-colour);
+    background-image: linear-gradient(to right, @colour-menu-sub-background, darken(@colour-menu-sub-background, 20%));
     background-size: @width-menu-gradient 100%;
     background-position: right;
     background-repeat: no-repeat;
