Add application form now working, associated API calls included

--- a/static/logui/less/core.less
+++ b/static/logui/less/core.less
@@ -47,6 +47,11 @@ button:hover {
     .button.hover
 }
 
+button[disabled] {
+    background-color: @colour-button-disabled;
+    cursor: default;
+}
+
 .button {
     display: inline-block;
     min-width: 50px;
