--- a/static/logui/less/global.less
+++ b/static/logui/less/global.less
@@ -13,6 +13,7 @@
 @colour-nojs-text: #FFF;
 
 @colour-button: @colour-logui-purple;
+@colour-button-disabled: tint(@colour-logui-purple, 80%);
 @colour-button-hover: tint(@colour-logui-purple, 30%);
 @colour-button-text: #FFF;
 
