--- a/static/logui/less/main.less
+++ b/static/logui/less/main.less
@@ -201,3 +201,11 @@ main section div.table div.row span.icon a {
     font-size: 0;
     color: transparent; 
 }
+
+main section div.split {
+    display: flex;
+}
+
+main section div.split div.right {
+    line-height: 18pt;
+}
