--- a/worker/logui_apps/control/templates/logui/control/landing.html
+++ b/worker/logui_apps/control/templates/logui/control/landing.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" type="text/less" href="{% static 'logui/less/nav/menu.less' %}" />
     <link rel="stylesheet" type="text/less" href="{% static 'logui/less/nav/grid.less' %}" />
     <link rel="stylesheet" type="text/less" href="{% static 'logui/less/main.less' %}" />
+    <link rel="stylesheet" type="text/less" href="{% static 'logui/less/add.less' %}" />
     <link rel="stylesheet" type="text/less" href="{% static 'logui/less/footer.less' %}" />
     <link rel="stylesheet" type="text/less" href="{% static 'logui/less/login.less' %}" />
     <link rel="stylesheet" type="text/less" href="{% static 'logui/less/applications.less' %}" />
